# deta-rust

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: error.rs  item.rs  lib.rs  update.rs
tests/: consistency.rs
