[package]
name = "deta"
version = "0.1.0"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.22"

[dev-dependencies]
anyhow = "1.0.34"
futures = "0.3.8"
tokio = { version = "0.2.22", features = ["full"] }
